<?xml version="1.0"?>
<package format="2">
	<name>robot_statemachine</name>
	<version>0.0.0</version>
	<description>The robot_statemachine package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example: -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="marco@todo.todo">marco</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<!-- Url tags are optional, but multiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- Example: -->
	<!-- <url type="website">http://wiki.ros.org/robot_statemachine</url> -->


	<!-- Author tags are optional, multiple are allowed, one per tag -->
	<!-- Authors do not have to be maintainers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->
	<buildtool_depend>catkin</buildtool_depend>
	<exec_depend>statemachine</exec_depend>
	<exec_depend>statemachine_msgs</exec_depend>
	<exec_depend>statemachine_additions</exec_depend>
	<exec_depend>statemachine_rviz_plugins</exec_depend>
	<exec_depend>statemachine_rqt_plugins</exec_depend>
	
	<export>
		<metapackage />
	</export>
</package>
