<?xml version="1.0"?>
<package format="2">
	<name>rsm_additions</name>
	<version>1.1.1</version>
	<description>The rsm_additions package includes plugins for the Robot Statemachine and exemplary launch files</description>
	<maintainer email="marco.stb1993@gmail.com">marco</maintainer>
	<license>BSD</license>
	<url type="repository">https://github.com/MarcoStb1993/robot_rsm</url>
	<url type="bugtracker">https://github.com/MarcoStb1993/robot_rsm/issues</url>
	<maintainer email="marco.stb1993@gmail.com">Marco Steinbrink</maintainer>
	<author email="marco.stb1993@gmail.com">Marco Steinbrink</author> 
	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_export_depend>actionlib</build_export_depend>
	<exec_depend>actionlib</exec_depend>
	<build_depend>pluginlib</build_depend>
	<build_export_depend>pluginlib</build_export_depend>
	<exec_depend>pluginlib</exec_depend>
	<exec_depend>rsm_core</exec_depend>
	<build_depend>rsm_core</build_depend>
	<build_export_depend>rsm_core</build_export_depend>
	<build_depend>rsm_msgs</build_depend>
	<build_export_depend>rsm_msgs</build_export_depend>
	<exec_depend>rsm_msgs</exec_depend>
	<build_depend>move_base_msgs</build_depend>
	<build_export_depend>move_base_msgs</build_export_depend>
	<exec_depend>move_base_msgs</exec_depend>

	<export>
		<rsm_core plugin="${prefix}/rsm_plugins.xml" />
	</export>
</package>
