<?xml version="1.0"?>
<package format="2">
	<name>rsm_additions</name>
	<version>1.2.0</version>
	<description>The rsm_additions package includes plugins for the Robot
		Statemachine and exemplary launch files
	</description>
	<license>BSD</license>
	<url type="repository">https://github.com/MarcoStb1993/robot_statemachine</url>
	<url type="bugtracker">https://github.com/MarcoStb1993/robot_statemachine/issues</url>
	<maintainer email="marco.stb1993@gmail.com">Marco Steinbrink</maintainer>
	<author email="marco.stb1993@gmail.com">Marco Steinbrink</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	<build_depend>actionlib</build_depend>
	<build_export_depend>actionlib</build_export_depend>
	<exec_depend>actionlib</exec_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_export_depend>actionlib_msgs</build_export_depend>
	<exec_depend>actionlib_msgs</exec_depend>
	<build_depend>pluginlib</build_depend>
	<build_export_depend>pluginlib</build_export_depend>
	<exec_depend>pluginlib</exec_depend>
	<exec_depend>rsm_core</exec_depend>
	<build_depend>rsm_core</build_depend>
	<build_export_depend>rsm_core</build_export_depend>
	<build_depend>rsm_msgs</build_depend>
	<build_export_depend>rsm_msgs</build_export_depend>
	<exec_depend>rsm_msgs</exec_depend>
	<build_depend>move_base_msgs</build_depend>
	<build_export_depend>move_base_msgs</build_export_depend>
	<exec_depend>move_base_msgs</exec_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_export_depend>visualization_msgs</build_export_depend>
	<exec_depend>visualization_msgs</exec_depend>
	<build_depend>std_msgs</build_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<exec_depend>std_msgs</exec_depend>
	<build_depend>std_srvs</build_depend>
	<build_export_depend>std_srvs</build_export_depend>
	<exec_depend>std_srvs</exec_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<build_depend>tf</build_depend>
	<build_export_depend>tf</build_export_depend>
	<exec_depend>tf</exec_depend>
	<build_depend>tf2</build_depend>
	<build_export_depend>tf2</build_export_depend>
	<exec_depend>tf2</exec_depend>
	<build_depend>tf2_ros</build_depend>
	<build_export_depend>tf2_ros</build_export_depend>
	<exec_depend>tf2_ros</exec_depend>	

	<export>
		<rsm_core plugin="${prefix}/rsm_plugins.xml" />
	</export>
</package>
