<?xml version="1.0"?>
<package format="2">
	<name>rsm_msgs</name>
	<version>1.2.1</version>
	<description>The rsm_msgs package features messages and services for the Robot Statemachine</description>
	<license>BSD</license>
	<url type="repository">https://github.com/MarcoStb1993/robot_statemachine</url>
	<url type="bugtracker">https://github.com/MarcoStb1993/robot_statemachine/issues
	</url>
	<maintainer email="marco.stb1993@gmail.com">Marco Steinbrink</maintainer>
	<author email="marco.stb1993@gmail.com">Marco Steinbrink</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
