<?xml version="1.0"?>
<package format="2">
	<name>rsm_rqt_plugins</name>
	<version>1.1.1</version>
	<description>The rsm_rqt_plugins package includes the Robot Statemachine GUI plugin for rqt</description>
	<maintainer email="marco.stb1993@gmail.com">marco</maintainer>
	<license>BSD</license>
	<url type="repository">https://github.com/MarcoStb1993/robot_rsm</url>
	<url type="bugtracker">https://github.com/MarcoStb1993/robot_rsm/issues</url>
	<maintainer email="marco.stb1993@gmail.com">Marco Steinbrink</maintainer>
	<author email="marco.stb1993@gmail.com">Marco Steinbrink</author> 


	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rqt_gui</build_depend>
	<build_depend>rqt_gui_cpp</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rqt_gui</build_export_depend>
	<build_export_depend>rqt_gui_cpp</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rqt_gui</exec_depend>
	<exec_depend>rqt_gui_cpp</exec_depend>
	<build_depend>rsm_msgs</build_depend>
	<build_export_depend>rsm_msgs</build_export_depend>
	<exec_depend>rsm_msgs</exec_depend>
	<build_depend>cmake_modules</build_depend>
	<build_export_depend>cmake_modules</build_export_depend>
	<exec_depend>cmake_modules</exec_depend>

	<export>
		<rqt_gui plugin="${prefix}/rsm_rqt_plugins.xml" />
	</export>
</package>
