<?xml version="1.0"?>
<package format="2">
	<name>statemachine</name>
	<version>1.0.0</version>
	<description>The statemachine package includes the robot statemachine's main functionality</description>
	<maintainer email="marco.steinbrink@outlook.de">marco</maintainer>
	<license>BSD</license>
	<url type="repository">https://github.com/MarcoStb1993/robot_statemachine</url>
	<url type="bugtracker">https://github.com/MarcoStb1993/robot_statemachine/issues</url>
	<maintainer email="marco.steinbrink@outlook.de">Marco Steinbrink</maintainer>
	<author email="marco.steinbrink@outlook.de">Marco Steinbrink</author> 

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_export_depend>actionlib</build_export_depend>
	<exec_depend>actionlib</exec_depend>
	<build_depend>libpcl-all-dev</build_depend>
	<exec_depend>libpcl-all</exec_depend>
	<build_depend>pluginlib</build_depend>
	<build_export_depend>pluginlib</build_export_depend>
	<exec_depend>pluginlib</exec_depend>
	<build_depend>statemachine_msgs</build_depend>
	<build_export_depend>statemachine_msgs</build_export_depend>
	<exec_depend>statemachine_msgs</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
	</export>
</package>
