<?xml version="1.0"?>
<package format="2">
	<name>statemachine_rqt_plugins</name>
	<version>1.0.0</version>
	<description>The statemachine_rqt_plugins package includes a robot statemachine GUI plugin for rqt</description>
	<maintainer email="marco.steinbrink@outlook.de">marco</maintainer>
	<license>BSD</license>
	<url type="repository">https://github.com/MarcoStb1993/robot_statemachine</url>
	<url type="bugtracker">https://github.com/MarcoStb1993/robot_statemachine/issues</url>
	<maintainer email="marco.steinbrink@outlook.de">Marco Steinbrink</maintainer>
	<author email="marco.steinbrink@outlook.de">Marco Steinbrink</author> 


	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rqt_gui</build_depend>
	<build_depend>rqt_gui_cpp</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rqt_gui</build_export_depend>
	<build_export_depend>rqt_gui_cpp</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rqt_gui</exec_depend>
	<exec_depend>rqt_gui_cpp</exec_depend>
	<build_depend>statemachine_msgs</build_depend>
	<build_export_depend>statemachine_msgs</build_export_depend>
	<exec_depend>statemachine_msgs</exec_depend>


	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<rqt_gui plugin="${prefix}/statemachine_rqt_plugins.xml" />
	</export>
</package>
