<?xml version="1.0"?>
<package format="2">
	<name>statemachine_rviz_plugins</name>
	<version>0.0.0</version>
	<description>The statemachine_rviz_plugins package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example: -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="marco@todo.todo">marco</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<!-- Url tags are optional, but multiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- Example: -->
	<!-- <url type="website">http://wiki.ros.org/statemachine_rviz_plugins</url> -->


	<!-- Author tags are optional, multiple are allowed, one per tag -->
	<!-- Authors do not have to be maintainers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>roscpp</exec_depend>
	<build_depend>roscpp</build_depend>
	<exec_depend>rviz</exec_depend>
	<build_depend>rviz</build_depend>
	<build_depend>interactive_markers</build_depend>
	<exec_depend>interactive_markers</exec_depend>
	<build_depend>visualization_msgs</build_depend>
	<exec_depend>visualization_msgs</exec_depend>
	<build_depend>statemachine_msgs</build_depend>
	<build_export_depend>statemachine_msgs</build_export_depend>
	<exec_depend>statemachine_msgs</exec_depend>

	<export>
		<rviz plugin="${prefix}/statemachine_rviz_plugins.xml" />
	</export>

</package>
