<?xml version="1.0"?>
<package format="2">
	<name>statemachine_rviz_plugins</name>
	<version>0.0.0</version>
	<description>The statemachine_rviz_plugins package includes a robot statemachine GUI plugin for RViz and the waypoint visualization</description>
	<maintainer email="marco.steinbrink@outlook.de">marco</maintainer>
	<license>BSD</license>
	<url type="repository">https://github.com/MarcoStb1993/robot_statemachine</url>
	<url type="bugtracker">https://github.com/MarcoStb1993/robot_statemachine/issues</url>
	<maintainer email="marco.steinbrink@outlook.de">Marco Steinbrink</maintainer>
	<author email="marco.steinbrink@outlook.de">Marco Steinbrink</author> 

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>roscpp</exec_depend>
	<build_depend>roscpp</build_depend>
	<exec_depend>rviz</exec_depend>
	<build_depend>rviz</build_depend>
	<build_depend>interactive_markers</build_depend>
	<exec_depend>interactive_markers</exec_depend>
	<build_depend>visualization_msgs</build_depend>
	<exec_depend>visualization_msgs</exec_depend>
	<build_depend>statemachine_msgs</build_depend>
	<build_export_depend>statemachine_msgs</build_export_depend>
	<exec_depend>statemachine_msgs</exec_depend>
	<build_depend>cmake_modules</build_depend>
	<build_export_depend>cmake_modules</build_export_depend>
	<exec_depend>cmake_modules</exec_depend>

	<export>
		<rviz plugin="${prefix}/statemachine_rviz_plugins.xml" />
	</export>

</package>
